--- a/example_helm_repos/kruise/templates/postupgrade-hook.yaml
+++ b/example_helm_repos/kruise/templates/postupgrade-hook.yaml
@@ -10,7 +10,7 @@ spec:
     spec:
       containers:
       - name: health-check-container
-        image: openkruise/hook:latest
+        image: openkruise/helm-hook:latest
         command: ["/bin/sh", "-c"]
         args:
         - |
